--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "2"
 services:
-  app:
+  app_nama:
     build: .
     links:
       - db
     ports:
       - "5000:5000"
-  db:
+  db_nama:
     image: mysql:5.7
     ports:
       - "32000:3306"
